--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 volumes:
   pg_data:
+  static:
   
 services:
   db:
@@ -13,6 +14,8 @@ services:
   backend:
     build: ./backend/
     env_file: .env
+    volumes:
+      - static:/backend_static
     
     depends_on:
       - db
@@ -20,4 +23,14 @@ services:
   frontend:
     env_file: .env
     build: ./frontend/
+    volumes:
+      - static:/frontend_static
+    command: cp -r /app/build/. /frontend_static/
+    
+  gateway:
+    build: ./gateway/
+    ports:
+      - 8000:80
+    volumes:
+      - static:/staticfiles/
         
