--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,18 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Check out repository code
+      - name: Check out code
         uses: actions/checkout@v3
       
-      - name: Print project tree
-        run: tree .
+      - name: Set up python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+          
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install flake8==6.0.0 flake8-isort==6.0.0
+      - name: Test with flake8
+        run: python -m flake8 backend/
+        
