--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install flake8==6.0.0 flake8-isort==6.0.0
-      - name: Test with flake8
-        run: python -m flake8 backend/
+      - name: Test with flake8 and Django tests
+        run: |
+          python -m flake8 backend/
+          cd backend/
+          python manage.py test
+          
         
