--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,19 @@ jobs:
   checkout-and-print-tree:
     runs-on: ubuntu-latest
     
+    services:
+      postgres:
+        image: postgres:13.10
+        
+        env:
+          POSTGRES_USER=django_user
+          POSTGRES_PASSWORD=%secretpassword#18
+          POSTGRES_DB=django
+        ports:
+          - 5432: 5432
+    
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -21,6 +34,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install flake8==6.0.0 flake8-isort==6.0.0
+          pip install -r ./backend/requirements.txt
       - name: Test with flake8 and Django tests
         run: |
           python -m flake8 backend/
