--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         
         env:
           POSTGRES_USER: django_user
-          POSTGRES_PASSWORD: %secretpassword#18
+          POSTGRES_PASSWORD: "%secretpassword#18"
           POSTGRES_DB: django
         ports:
           - 5432: 5432
