--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           POSTGRES_PASSWORD: "%secretpassword#18"
           POSTGRES_DB: django
         ports:
-          - 5432: 5432
+          - 5432:5432
     
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
         
@@ -36,6 +36,12 @@ jobs:
           python -m pip install flake8==6.0.0 flake8-isort==6.0.0
           pip install -r ./backend/requirements.txt
       - name: Test with flake8 and Django tests
+        env:
+          POSTGRES_USER: django_user
+          POSTGRES_PASSWORD: "%secretpassword#18"
+          POSTGRES_DB: django
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
         run: |
           python -m flake8 backend/
           cd backend/
