--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,8 @@ jobs:
           pip install -r ./backend/requirements.txt
       - name: Test with flake8 and Django tests
         env:
-          POSTGRES_USER: django_user
-          POSTGRES_PASSWORD: "%secretpassword#18"
+          POSTGRES_USER: ${{secret.POSTGRES_USER}}
+          POSTGRES_PASSWORD: ${{secret.POSTGRES_PASSWORD}}
           POSTGRES_DB: django
           DB_HOST: 127.0.0.1
           DB_PORT: 5432
@@ -46,5 +46,28 @@ jobs:
           python -m flake8 backend/
           cd backend/
           python manage.py test
+          
+  build_and_push_to_docker_hub:
+    name: Push Docker image to dockerhub
+    runs-on: ubuntu-latest
+    needs: tests
+    
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to docker
+        uses: docker/login-action@v2
+        with:
+          username: ${{secret.DOCKER_USERNAME}}
+          password: ${{secret.DOCKER_PASSWORD}}
+      - name: Push to dockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend/
+          push: true
+          tags:texikator/taski_backend:latest
+    
           
         
