--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,8 @@ jobs:
           pip install -r ./backend/requirements.txt
       - name: Test with flake8 and Django tests
         env:
-          POSTGRES_USER: ${{secret.POSTGRES_USER}}
-          POSTGRES_PASSWORD: ${{secret.POSTGRES_PASSWORD}}
+          POSTGRES_USER: ${{secrets.POSTGRES_USER}}
+          POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
           POSTGRES_DB: django
           DB_HOST: 127.0.0.1
           DB_PORT: 5432
@@ -60,8 +60,8 @@ jobs:
       - name: Login to docker
         uses: docker/login-action@v2
         with:
-          username: ${{secret.DOCKER_USERNAME}}
-          password: ${{secret.DOCKER_PASSWORD}}
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
       - name: Push to dockerHub
         uses: docker/build-push-action@v4
         with:
