--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: main
     
 jobs:
-  checkout-and-print-tree:
+  tests:
     runs-on: ubuntu-latest
     
     services:
@@ -46,6 +46,8 @@ jobs:
           python -m flake8 backend/
           cd backend/
           python manage.py test
+  
+
           
   build_and_push_to_docker_hub:
     name: Push Docker image to dockerhub
