--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,49 @@ jobs:
           context: ./backend/
           push: true
           tags: texikator/taski_backend:latest
+          
+  frontend_tests:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: setup NodeJS
+        uses: actions/setup-node@v3
+        
+        with:
+          noe-version: 18
+          
+      - name: Install dependencies
+        run: |
+          cd frontend/
+          npm ci
+          
+      - name: Test frontend
+        run: |
+          cd frontend/
+          npm run tests
+          
+  build_frontend_and_push_to_docker_hub:
+    name: Push frontend Docker image to dockerhub
+    runs-on: ubuntu-latest
+    needs: frontend_tests
+    
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: actions/setup-buildx-action@v2
+      - name: login to docker
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to dockerhub
+        uses: actions/build-push-action@v4
+        with:
+          context: ./frontend/
+          push: true
+          tags: texikator/taski_frontens:latest
     
     
     
