--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,18 +102,40 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
-        uses: actions/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v2
       - name: login to docker
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to dockerhub
-        uses: actions/build-push-action@v4
+        uses: docker/build-push-action@v4
         with:
           context: ./frontend/
           push: true
           tags: texikator/taski_frontens:latest
     
+  build_gateway_and_push_to_docker_hub:
+    name: Push gateway Docker image to DockerHub
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrests.DOCKER_PASSWORD }}
+      - name: Push to Docker
+        uses: docker/build-push-action@v4
+        with:
+          context: ./gateway/
+          push: true
+          tags: texikator/taski_gateway:latest
+        
+
     
     
           
