--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -128,7 +128,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrests.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker
         uses: docker/build-push-action@v4
         with:
