--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -21,8 +21,10 @@ services:
   frontend:
     image: texikator/taski_frontend
     env_file: .env
+    command: cp -r /app/build/. /frontend_static/
     volumes:
       - static_volume:/frontend_static
+
         
   gateway:
     image: texikator/taski_gateway
