--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,7 +80,7 @@ jobs:
         uses: actions/setup-node@v3
         
         with:
-          noe-version: 18
+          node-version: 18
           
       - name: Install dependencies
         run: |
