--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -173,7 +173,7 @@ jobs:
             sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static
             
   send_telegram_message:
-    runs-on: uuntu-latest
+    runs-on: ubuntu-latest
     needs: deploy
     steps:
       - name: Send message
