--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,7 @@ jobs:
           POSTGRES_DB: django
           DB_HOST: 127.0.0.1
           DB_PORT: 5432
+          DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
         run: |
           python -m flake8 backend/
           cd backend/
