--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,5 +1,7 @@
 server {
 	listen 80;
+	server_tokens off;
+	
 	location /api/ {
 		proxy_set_header Host $http_host;
 		proxy_pass http://backend:8000/api/;
